--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background-image: url(p.jpg);
+  background-image: url(assets/p.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   font-family: 'Balsamiq Sans', cursive;
