--- a/style.css
+++ b/style.css
@@ -59,9 +59,17 @@ body {
   float: right;
   margin-top: -250px;
   font-size: 18px;
-  margin-right: 25%;
+  margin-right: 30%;
 }
 .tabela {
+  width: 10%;
+  height: 200px;
+  float: right;
+  margin-top: -250px;
+  font-size: 18px;
+  margin-right: 19%;
+}
+.conceitos {
   width: 15%;
   height: 200px;
   margin-top: -250px;
