--- a/style.css
+++ b/style.css
@@ -1,7 +1,54 @@
 body {
   margin: 0px;
-  background-image: url(assets/p.jpg);
-  background-repeat: no-repeat;
-  background-size: 100%;
   font-family: 'Balsamiq Sans', cursive;
+}
+.dd {
+  padding-left: 41%;
+  height: 150px;
+  width: 18%;
+}
+.link {
+  color: red;
+  text-decoration: none;
+}
+.link:hover {
+  color: black;
+  text-decoration: underline;
+}
+.caixa {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3,1fr);
+}
+.c {
+  background-color: navy;
+  color: white;
+  border: 3px solid black;
+}
+.c1 {
+  height: 130px;
+  grid-column:1/5;
+}
+.c2 {
+  grid-column:1/5;
+  height: 200px;
+}
+.c3 {
+  height: 300px;
+}
+.c4 {
+  height: 300px;
+}
+.c5 {
+  height: 300px;
+}
+.c6 {
+  grid-column: 1/2;
+  height: 300px;
+}
+.c7 {
+  height: 300px;
+}
+.c8 {
+  height: 300px;
 }
